search pipe added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,5 @@
+<div class="wrapper">
+
 <br>
 <div class="row" *ngIf="showAbout">
   <div class="col-md-4"></div>
@@ -116,5 +118,6 @@
     </table>
   </div>
   <div class="col-md-2"></div>
+</div>
 </div>
 
