--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+</head>
 <admin-header *ngIf="loginService.isAdminloggedin"></admin-header>
 <header *ngIf="!loginService.isAdminloggedin"></header>
 <router-outlet></router-outlet>
+<!-- <div class="footer" style="background-color: lightblue;">
+    <h5>About</h5>
+    <p style="text-align: left;">Capcafe Application for pre-ordering across all Capgemini campuses.</p>
+    <p style="text-align: left;">Developed By: Harshita Gupta, Sameer Mandavia, Supriya Pawar, Akash Verma</p>
+    <p><a href="/www.facebook.com"><i class="fab fa-facebook" st></i></a></p>
+  </div> -->
+
