--- a/src/app/raise-ticket/raise-ticket.component.css
+++ b/src/app/raise-ticket/raise-ticket.component.css
@@ -1,8 +1,8 @@
-
+/* 
 
 .table
 {
-    /* margin-top: 10px; */
+   
     text-align: center;
     border: 1px solid black;
 }
@@ -10,7 +10,7 @@
 .back
 {
     margin-left: 1040px;
-    /* margin-top: 10px; */
+    
     font-size: 20px;
 }
 th{
@@ -21,4 +21,4 @@ th{
 {
     background-color: rgb(10, 128, 238);
     color: white;
-}
+} */
