--- a/src/app/view-cafe/view-cafe.component.html
+++ b/src/app/view-cafe/view-cafe.component.html
@@ -43,7 +43,7 @@
   <br>
 
   <table class="table table-hover">
-    <thead>
+    <thead class="thead-dark">
       <tr>
         <th scope="col">Cafe Id</th>
         <th scope="col">Name</th>
@@ -68,7 +68,7 @@
     </tr>
     <tr *ngIf="!hideMenu && cafe.cafeId === currentId">
       <th colspan="8">
-        <table class="table table-sm table-dark" >
+        <table class="table table-sm table-hover" >
           <thead>
             <tr>
                 <th scope="col">Sl No.</th>
