--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/solve-ticket']" routerLinkActive="active">Tickets</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/admin-review']" routerLinkActive="active">Reviews</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
